overflow home fix

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -105,3 +105,7 @@ footer {
   padding-top: 2rem;
   padding-bottom: 3rem;
 }
+
+.home {
+  overflow-x: hidden;
+}
